--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "resume"]
 	path = submodules/resume
-	url = git@github.com:nate-h/resume.git
+	url = https://github.com/nate-h/resume.git
