--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "prismjs": "^1.16.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "prismjs": "^1.21.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-e2e-cypress": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-plugin-unit-jest": "^3.8.0",
-    "@vue/cli-service": "^3.8.4",
+    "@vue/cli-plugin-e2e-cypress": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-unit-jest": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-eslint": "^10.0.1",
+    "@vue/test-utils": "^1.0.5",
+    "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.2",
+    "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.14.1",
     "raw-loader": "^2.0.0",
-    "sass-loader": "^7.0.1",
-    "vue-prism-component": "^1.1.1",
+    "sass-loader": "^7.3.1",
+    "vue-prism-component": "^1.2.0",
     "vue-svg-loader": "^0.11.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.12"
   }
 }
