--- a/package.json
+++ b/package.json
@@ -5,36 +5,30 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "prismjs": "^1.26.0",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.3"
+    "prismjs": "^1.21.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-e2e-cypress": "^5.0.0-rc.2",
-    "@vue/cli-plugin-eslint": "^5.0.0-rc.2",
-    "@vue/cli-plugin-unit-jest": "^5.0.0-rc.2",
-    "@vue/cli-service": "^5.0.0-rc.2",
+    "@vue/cli-plugin-e2e-cypress": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-unit-jest": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/test-utils": "^1.3.0",
-    "@vue/vue2-jest": "^27.0.0-alpha.3",
+    "@vue/test-utils": "^1.0.5",
     "babel-eslint": "^10.1.0",
-    "cypress": "^8.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.1.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.14.1",
-    "prettier": "^2.4.1",
     "raw-loader": "^2.0.0",
     "sass-loader": "^7.3.1",
     "vue-prism-component": "^1.2.0",
     "vue-svg-loader": "^0.11.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.12"
   }
 }
